Bug 1402739 - Fix mutex handling around async ImageContainer r=nical